        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=16162
        Problems with float parsing on Linux (locale-dependent parsing was used).

        * kjs/dtoa.cpp: Removed USE_LOCALE to reduce future confusion.
        * kjs/lexer.cpp: (KJS::Lexer::lex): Parse with kjs_strtod, not the system one.



Canonical link: https://commits.webkit.org/22636@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28771 268f45cc-cd09-0410-ab3c-d52691b4dbfc